force-app/main/default/objects/Invoice_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Provides a brief description about the Item.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>