force-app/main/default/objects/Invoice_Line_Item__c/fields/Discount_in_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_Percent__c</fullName>
    <label>Discount in Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>