force-app/main/default/objects/Invoice_Line_Item__c/fields/Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_Price__c</fullName>
    <inlineHelpText>Specifies the Amount of Discount availed on the Item.</inlineHelpText>
    <label>Discount Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>