force-app/main/default/objects/Invoice_Line_Item__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>IF( Total_Price__c &gt;  Discount_Price__c ,Total_Price__c -  Discount_Price__c,Total_Price__c )</formula>
    <inlineHelpText>Formula : Calculated by Subtracting the Discount Price from Total Price,provided Discount must be less than the Total Price Amount.</inlineHelpText>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>