force-app/main/default/objects/Invoice_Line_Item__c/fields/Part_Cost__c.field-meta.xml
<CustomField>
    <fullName>Part_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Part MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>