force-app/main/default/objects/Invoice_Line_Item__c/fields/Related_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Invoice__c</fullName>
    <inlineHelpText>Specifies the Invoice record to which the current record is associated with.</inlineHelpText>
    <label>Related To Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>