force-app/main/default/objects/Invoice_Line_Item__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <formula>TEXT(  Related_To_Invoice__r.Store_Location__c  )</formula>
    <label>Store Location</label>
    <type>Text</type>
</CustomField>