force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Dealer_Cost_Per_LI__c.field-meta.xml
<CustomField>
    <fullName>Total_Dealer_Cost_Per_LI__c</fullName>
    <description>This field Calculates the total cost of line item based on the dealer price and Quantity</description>
    <formula>Dealer_Price__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Dealer Cost Per LI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>