force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>Quantity__c  *  Part_Cost__c</formula>
    <inlineHelpText>Formula : Calculated by multiplying the MSRP of single unit of Item with the Quantity of the Item ordered/purchased.</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>