force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Refunded_Amount_on_Refunded_Item_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Refunded_Amount_on_Refunded_Item_Only</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
!ISBLANK( Refunded_Amount__c ),
 Refunded__c == false)</errorConditionFormula>
    <errorDisplayField>Refunded_Amount__c</errorDisplayField>
    <errorMessage>Refunded Amount must be specified only when Refunded checkbox is checked.</errorMessage>
</ValidationRule>