force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Valid_Discount_Price_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Discount_Price_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>Discount_Price__c &gt;  Total_Price__c</errorConditionFormula>
    <errorDisplayField>Discount_Price__c</errorDisplayField>
    <errorMessage>Discount Price has to be less than the Total Price</errorMessage>
</ValidationRule>