force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Valid_Quantity_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Quantity_Rule</fullName>
    <active>false</active>
    <description>Quantity should be a valid positive number.</description>
    <errorConditionFormula>Quantity__c &lt;0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity should be a valid positive number.</errorMessage>
</ValidationRule>