force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Valid_Refunded_Amount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Refunded_Amount_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Refunded_Amount__c &gt;  Related_To_Invoice__r.Total_Amount_on_Invoice__c ,true,false)</errorConditionFormula>
    <errorDisplayField>Refunded_Amount__c</errorDisplayField>
    <errorMessage>Refunded Amount of Line Item cannot exceed the Total Amount on Invoice.</errorMessage>
</ValidationRule>